List alignment fixes

--- a/web/wp-content/themes/lfevents/src/assets/scss/blocks/_list.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/blocks/_list.scss
@@ -1,9 +1,7 @@
-ul {
+ul,
+ol {
   li {
     background-size: 10px 25.6px; // defaults.
-  }
-  // child ULs.
-  ul {
   }
   // COLUMNS
   &.has-two-columns {
@@ -91,12 +89,17 @@ ul {
   }
   // SELECTED ICON.
   &[class*='has-icon-'] {
-    margin: 0 0 1.5em;
     padding: 0;
     list-style: none;
     li {
       list-style: none;
       background-repeat: no-repeat;
+    }
+  }
+  &[class*='has-icon-']:not([class*='has-icon-size']) {
+    li {
+      padding-left: calc(10px + 1em);
+      background-size: 10px 25.6px;
     }
   }
   &.has-icon-angle-right {
